@@ -2063,7 +2063,6 @@ namespace aux {
 			// Configures the SAM session
 			// quantity of I2P inbound and outbound tunnels [1..16].
 			// number of hops for I2P inbound and outbound tunnels [0..7]
-			// variance for I2P inbound and outbound tunnels [0..7]
 			// Changing these will not trigger a reconnect to the SAM bridge,
 			// they will take effect the next time the SAM connection is
 			// re-established (by restarting or changing i2p_hostname or
@@ -2072,8 +2071,6 @@ namespace aux {
 			i2p_outbound_quantity,
 			i2p_inbound_length,
 			i2p_outbound_length,
-			i2p_inbound_length_variance,
-			i2p_outbound_length_variance,
 
 			// ``announce_port`` is the port passed along as the ``port`` parameter
 			// to remote trackers such as HTTP or DHT. This setting does not affect
@@ -2088,6 +2085,10 @@ namespace aux {
 			//    the external NAT-PMP port (configured using ``announce_port``)
 			//    instead of the actual local listening port.
 			announce_port,
+
+			// Configures the variance for I2P inbound and outbound tunnel lengths [-7..7]
+			i2p_inbound_length_variance,
+			i2p_outbound_length_variance,
 
 			max_int_setting_internal
 		};
