@@ -1,6 +1,7 @@
 2.0.12
 
 	* fix handling of invalid filenames
+	* add support for I2CP inbound.lengthVariance and outbound.lengthVariance tunnel settings
 
 2.0.11 released
 
